--- a/Shared/MainLayout.razor.css
+++ b/Shared/MainLayout.razor.css
@@ -9,7 +9,7 @@ main {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-image: linear-gradient(180deg, rgb(42, 65, 107) 0%, #0f0f0f 70%);
 }
 
 .top-row {
