--- a/Components/ListProductComponents.razor.css
+++ b/Components/ListProductComponents.razor.css
@@ -7,24 +7,45 @@
 }
 
 .header-contenedor{
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-}
-
-.contenedor-campos{
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
+}
+@media (min-width:640px){ 
+    .header-contenedor{
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+    }
 }
 
 .header-text{
+    display:flex ;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
     margin-bottom: 25px;
+
 }
+
+@media (min-width:640px){  
+    .header-text{
+        display: block;
+    }
+
+}
+
 
 .header-text h2{
     font-size:25px ;
     font-weight: 700;
-    margin-bottom: 25px;
+
+   
+}
+
+@media (min-width:640px){ 
+    .header-text h2{
+        margin-bottom: 25px;
+
+    }
 }
 
 .header-text a{
@@ -35,10 +56,49 @@
     background-color: #0a9e3b;
 }
 
+
+.contenedor-campos{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 25px;
+}
+
+@media (min-width:646px){
+    .contenedor-campos{
+        justify-content: space-between;
+        margin-bottom: 0;
+        align-items: unset;
+    }
+
+}
+
+
+
+.campo{
+    display: flex;
+    flex-direction: column;
+}
+
+@media (min-width:646px){
+    .campo{
+        display: block;
+    }
+
+}
+
 .contenedor-productos{
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: 1fr;
     gap: 20px;
+}
+
+@media (min-width:640px){ 
+    .contenedor-productos{
+        grid-template-columns: repeat(3,1fr);
+
+    }
 }
 
 .producto{
@@ -88,9 +148,4 @@
     text-align: center;
     color: var(--blanco);
     cursor: pointer;
-}
-
-.producto__boton:hover{
-    background-color: #03395a;
-     color: #ffff;
 }
