--- a/Components/ListProductComponents.razor
+++ b/Components/ListProductComponents.razor
@@ -31,10 +31,9 @@
             <img src="https://live.staticflickr.com/3119/3509767891_71a261fd0e_w.jpg " alt="Producto" class="producto__imagen">
             <div class="producto__contenido">
                 <h3 class="producto__nombre">Producto 1</h3>
+                <h3 class="producto__categoria">Mmguevo</h3>
                 <p class="producto__descripcion">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui eveniet nesciunt hic incidunt
-                    dolorum consequuntur placeat, ad perspiciatis repellat ducimus maiores eaque aliquid velit
-                    inventore suscipit nulla tempora corporis doloribus.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 </p>
                 <div class="producto__precios">
                     <p class="producto__precio">$199</p>
@@ -46,10 +45,9 @@
             <img src="https://live.staticflickr.com/3119/3509767891_71a261fd0e_w.jpg " alt="Producto" class="producto__imagen">
             <div class="producto__contenido">
                 <h3 class="producto__nombre">Producto 2</h3>
+                <h3 class="producto__categoria">Mmguevo</h3>
                 <p class="producto__descripcion">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui eveniet nesciunt hic incidunt
-                    dolorum consequuntur placeat, ad perspiciatis repellat ducimus maiores eaque aliquid velit
-                    inventore suscipit nulla tempora corporis doloribus.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 </p>
                 <div class="producto__precios">
                     <p class="producto__precio">$199</p>
@@ -61,10 +59,9 @@
             <img src="https://live.staticflickr.com/3119/3509767891_71a261fd0e_w.jpg " alt="Producto" class="producto__imagen">
             <div class="producto__contenido">
                 <h3 class="producto__nombre">Producto 3</h3>
+                <h3 class="producto__categoria">Mmguevo</h3>
                 <p class="producto__descripcion">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui eveniet nesciunt hic incidunt
-                    dolorum consequuntur placeat, ad perspiciatis repellat ducimus maiores eaque aliquid velit
-                    inventore suscipit nulla tempora corporis doloribus.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 </p>
                 <div class="producto__precios">
                     <p class="producto__precio">$199</p>
