--- a/Components/ListProductComponents.razor.css
+++ b/Components/ListProductComponents.razor.css
@@ -81,6 +81,24 @@
     flex-direction: column;
 }
 
+.campo input:not([type="submit"]),
+select{
+    width: 100%;
+    height: 40px;
+    padding: 5px;
+    border: 5px solid #03395a;
+}
+.campo input[type="submit"]{
+    background-color: #03395a;
+    width: 100%;
+    height: 40px;
+    border: none;
+    padding: 5px;
+    color: #03395a;
+    font-size: 22px;
+    font-weight: 700;
+    text-transform: uppercase;
+}
 @media (min-width:646px){
     .campo{
         display: block;
@@ -103,6 +121,7 @@
 
 .producto{
     margin-bottom: 10px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .producto img{
@@ -119,6 +138,10 @@
 }
 
 .producto__nombre{
+    font-size: 20px;
+}
+
+.producto__categoria{
     font-size: 20px;
 }
 
